[package]
name = "rgpui-term"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
rgpui.workspace = true
alacritty_terminal = "0.25"
portable-pty.workspace = true
futures = "0.3"
smol = "2.0"
parking_lot = "0.12"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
itertools = "0.14"
smallvec = { version = "1.15", features = ["const_new"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[lints]
workspace = true
