[package]
name = "rgpui-term"
version.workspace = true
edition.workspace = true
publish = true
description = "终端模拟器组件"
license = "Apache-2.0"
repository = "https://github.com/launcher-rs/rgpui"

[dependencies]

rgpui.workspace = true
alacritty_terminal.workspace = true
portable-pty.workspace = true
futures.workspace = true
smol.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
itertools.workspace = true
smallvec.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true


[lints]
workspace = true
