[package]
name = "rgpui-tokio"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "Tokio 异步运行时集成"
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/rgpui_tokio.rs"
doctest = false

[dependencies]
anyhow.workspace = true
rgpui.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
