[package]
name = "rgpui-wgpu"
version = "0.1.1"
edition.workspace = true
publish.workspace = true
description = "wgpu 渲染后端"
license = "Apache-2.0"
repository = "https://github.com/launcher-rs/rgpui"

[lints]
workspace = true

[lib]
path = "src/rgpui_wgpu.rs"

[features]
default = []
font-kit = ["dep:font-kit"]

[dependencies]
rgpui.workspace = true
anyhow.workspace = true
bytemuck = "1"
cosmic-text = "0.19.0"
etagere = "0.2"
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
profiling.workspace = true
raw-window-handle = "0.6"
smallvec.workspace = true
swash = "0.2.6"
wgpu.workspace = true
unicode-segmentation.workspace = true

# Optional: only needed on platforms with multiple font sources (e.g. Linux)
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "94b0f28166665e8fd2f53ff6d268a14955c82269", package = "zed-font-kit", version = "0.14.1-zed", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
js-sys = "0.3"

indexmap.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "layout_line"
harness = false
