[package]
name = "rgpui-windows"
version.workspace = true
edition.workspace = true
publish = true
description = "Windows 平台实现"
license = "Apache-2.0"
repository = "https://github.com/launcher-rs/rgpui"

[lints]
workspace = true

[lib]
path = "src/rgpui_windows.rs"

[features]
default = ["rgpui/default"]
test-support = ["rgpui/test-support"]
screen-capture = ["rgpui/screen-capture", "scap"]

[dependencies]
rgpui.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
accesskit.workspace = true
accesskit_windows.workspace = true
anyhow.workspace = true
etagere = "0.2"
futures.workspace = true
image.workspace = true
itertools.workspace = true
log.workspace = true
muda = "0.16"
parking_lot.workspace = true
rand.workspace = true
raw-window-handle = "0.6"
smallvec.workspace = true
smol.workspace = true
uuid.workspace = true
windows.workspace = true
windows-core.workspace = true
windows-numerics = "0.3"
windows-registry = "0.5"

[target.'cfg(target_os = "windows")'.dependencies.scap]
workspace = true
optional = true

[target.'cfg(target_os = "windows")'.build-dependencies]
windows-registry = "0.5"
