[package]
name = "rgpui"
version = "0.1.1"
edition.workspace = true
description = "GUI UI framework"
publish = true
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/launcher-rs/rgpui"
keywords = ["desktop", "gui", "immediate"]
categories = ["gui"]


[lints]
workspace = true

[features]
default = ["font-kit", "wayland", "x11", "windows-manifest"]
test-support = [
    "leak-detection",
    "wayland",
    "x11",
    "proptest",
    "dep:git2",
]
inspector = ["rgpui-macros/inspector"]
leak-detection = []
reqwest = [
    "dep:reqwest",
    "dep:tokio",
]
tls = [
    "dep:rustls",
    "dep:rustls-platform-verifier",
]
wayland = [
    "bitflags",
]
x11 = [
    "scap?/x11",
]
screen-capture = [
    "scap",
]
windows-manifest = ["dep:embed-resource"]
input-latency-histogram = ["dep:hdrhistogram"]

[lib]
path = "src/rgpui.rs"
doctest = false

[dependencies]
anyhow.workspace = true
async-task = "4.7"
backtrace.workspace = true
bitflags = { workspace = true, optional = true }

ctor.workspace = true
dirs.workspace = true
derive_more.workspace = true
rgpui-macros.workspace = true
etagere = "0.2"
futures.workspace = true
futures-concurrency.workspace = true
image.workspace = true
inventory.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus = "1.13"
parking = "2.0.0"
parking_lot.workspace = true
postage.workspace = true
proptest = { workspace = true, optional = true }
chrono.workspace = true
profiling.workspace = true
rand.workspace = true
raw-window-handle = "0.6"
regex.workspace = true
rustc-hash.workspace = true
resvg = { version = "0.45.0", default-features = false, features = [
    "text",
    "system-fonts",
    "memmap-fonts",
    "raster-images"
] }
usvg = { version = "0.45.0", default-features = false }
ttf-parser = "0.25"
schemars.workspace = true
seahash = "4.1"
serde.workspace = true
serde_json.workspace = true
slotmap.workspace = true
smallvec.workspace = true
smol_str = "0.3.6"
async-channel.workspace = true
async-compression.workspace = true
async-fs.workspace = true
async-std.workspace = true
async-tar.workspace = true
async_zip.workspace = true
bytes.workspace = true
dunce.workspace = true
flume = "0.11"
futures-lite.workspace = true
git2 = { workspace = true, optional = true }
globset.workspace = true
heapless.workspace = true
http.workspace = true
http-body.workspace = true
percent-encoding.workspace = true
rayon.workspace = true
reqwest = { workspace = true, optional = true }
rust-embed.workspace = true
rustls = { workspace = true, optional = true }
rustls-platform-verifier = { workspace = true, optional = true }
serde_json_lenient.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
shlex.workspace = true
smol.workspace = true
take-until.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"], optional = true }
tracing.workspace = true
unicase.workspace = true
walkdir.workspace = true
which.workspace = true
stacksafe.workspace = true
strum.workspace = true
taffy = "=0.10.1"
thiserror.workspace = true
hdrhistogram = { workspace = true, optional = true }
waker-fn = "1.2.0"
lyon = "1.0"
pin-project = "1.1.10"
spin = "0.10.0"
pollster.workspace = true
url.workspace = true
uuid.workspace = true
web-time.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { workspace = true, features = ["js"] }


[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
cocoa.workspace = true
cocoa-foundation.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
core-graphics = "0.24"
core-video.workspace = true
core-text = "21"
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "94b0f28166665e8fd2f53ff6d268a14955c82269", package = "zed-font-kit", version = "0.14.1-zed", optional = true }
foreign-types = "0.5"
log.workspace = true
objc.workspace = true
objc2 = { version = "0.6", optional = true }
objc2-metal = { version = "0.3", optional = true }
mach2.workspace = true
#TODO: replace with "objc2"
metal.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dependencies]
pathfinder_geometry = "0.5"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows"))'.dependencies]
scap = { workspace = true, optional = true }



[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace=true, features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
tendril = "0.4.3"

[target.'cfg(unix)'.dependencies]
command-fds = "0.3.1"
libc.workspace = true
nix = { workspace = true, features = ["user"] }


[dev-dependencies]
backtrace.workspace = true
env_logger.workspace = true
rgpui-platform = { workspace = true, features = ["font-kit", "wayland", "x11"] }
lyon = { version = "1.0", features = ["extra"] }
proptest = { workspace = true }
rand.workspace = true
unicode-segmentation = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen = { workspace = true }
rgpui-web.workspace = true

[build-dependencies]
embed-resource = { version = "3.0", optional = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.71"
cbindgen = { version = "0.28.0", default-features = false }




[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "move_entity_between_windows"
path = "examples/move_entity_between_windows.rs"

[[example]]
name = "image"
path = "examples/image/image.rs"
required-features = ["reqwest"]

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "on_window_close_quit"
path = "examples/on_window_close_quit.rs"

[[example]]
name = "opacity"
path = "examples/opacity.rs"

[[example]]
name = "pattern"
path = "examples/pattern.rs"

[[example]]
name = "set_menus"
path = "examples/set_menus.rs"

[[example]]
name = "shadow"
path = "examples/shadow.rs"

[[example]]
name = "svg"
path = "examples/svg/svg.rs"

[[example]]
name = "tab_stop"
path = "examples/tab_stop.rs"

[[example]]
name = "text"
path = "examples/text.rs"

[[example]]
name = "text_wrapper"
path = "examples/text_wrapper.rs"

[[example]]
name = "tree"
path = "examples/tree.rs"

[[example]]
name = "uniform_list"
path = "examples/uniform_list.rs"

[[example]]
name = "window_shadow"
path = "examples/window_shadow.rs"

[[example]]
name = "grid_layout"
path = "examples/grid_layout.rs"

[[example]]
name = "list_example"
path = "examples/list_example.rs"

[[example]]
name = "mouse_pressure"
path = "examples/mouse_pressure.rs"


[[example]]
name = "transparent"
path = "examples/transparent.rs"

[[example]]
name = "tray"
path = "examples/tray.rs"

[[example]]
name = "tray_simple"
path = "examples/tray_simple.rs"

[[example]]
name = "daemon_app"
path = "examples/daemon_app.rs"
