[package]
name = "rgpui_platform"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/rgpui_platform.rs"

[features]
default = []
font-kit = ["rgpui_macos/font-kit"]
test-support = ["rgpui/test-support", "rgpui_macos/test-support"]
screen-capture = ["rgpui/screen-capture", "rgpui_macos/screen-capture", "rgpui_windows/screen-capture", "rgpui_linux/screen-capture"]
runtime_shaders = ["rgpui_macos/runtime_shaders"]
wayland = ["rgpui_linux/wayland"]
x11 = ["rgpui_linux/x11"]

[dependencies]
rgpui.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
rgpui_macos.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
rgpui_windows.workspace = true
rgpui = { workspace = true, features = ["windows-manifest"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
rgpui_linux.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
rgpui_web.workspace = true
console_error_panic_hook = "0.1.7"
