[package]
name = "app_assets"
description = "Example to load icons or images from assets folder."
version = "0.5.1"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
rgpui.workspace = true
rgpui_platform.workspace = true
rgpui-component = { workspace = true }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

[lints]
workspace = true
