[package]
name = "app_assets"
description = "Example to load icons or images from assets folder."
version = "0.1.0"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
rgpui.workspace = true
rgpui-platform.workspace = true
rgpui-component = { workspace = true }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

[lints]
workspace = true
