[package]
name = "dialog_overlay"
description = "An example of using gpui-component to create a Dialog with overlay."
version = "0.5.1"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
rgpui.workspace = true
rgpui_platform.workspace = true
rgpui-component.workspace = true
rgpui-component-assets.workspace = true

[lints]
workspace = true
